package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_devserver")

ts_library(
    name = "app",
    srcs = [
    	"app.tsx",
    	"index.tsx",
    ],
    tsconfig = "//:tsconfig.json",
     deps = [
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//react",
        "@npm//react-dom",
    ],
)

ts_devserver(
    name = "devserver",
    port = 8080,
    deps = [":app"],
    serving_path = "/bundle.js",
    static_files = [
    	"index.html",
    ],
)
